force-app/main/default/objects/AR_QA_Team__c/AR_QA_Team__c.object-meta.xml
<CustomObject>
    <label>AR_QA_Team</label>
    <nameField>
        <label>AR_QA_Team</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AR_QA_Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>