force-app/main/default/objects/AR_QA_Team__c/fields/EXT_01_EmailField__c.field-meta.xml
<CustomField>
    <fullName>EXT_01_EmailField__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>EXT-01-EmailField</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>