force-app/main/default/objects/AR_QA_Team__c/fields/EXT_02_NumberField__c.field-meta.xml
<CustomField>
    <fullName>EXT_02_NumberField__c</fullName>
    <externalId>true</externalId>
    <label>EXT-02-NumberField</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>