force-app/main/default/objects/AR_QA_Team__c/fields/EXT_03_TextField__c.field-meta.xml
<CustomField>
    <fullName>EXT_03_TextField__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>EXT-03-TextField</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>