force-app/main/default/objects/AR_QA_Team__c/fields/Test_Image_Field__c.field-meta.xml
<CustomField>
    <fullName>Test_Image_Field__c</fullName>
    <label>Test-Image-Field</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>