force-app/main/default/objects/AR_QA_Team__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>EXT_01_EmailField__c</columns>
    <columns>EXT_02_NumberField__c</columns>
    <columns>EXT_03_TextField__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>